[tool.poetry]
name = "coin-toss"
version = "0.1.0"
description = ""
authors = ["kosunghun317 <kosunghun317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.2"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
black = {extras = ["jupyter"], version = "^24.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
